Fix issue #8: tooltip label with spaces wraps: add nowrap to stylesheet

--- a/src/style.less
+++ b/src/style.less
@@ -266,6 +266,7 @@ input[type=range].range-slider {
       border-radius: .25rem;
       box-sizing: border-box;
       font-size: 0.875rem;
+      white-space: nowrap;
     }
 
     .range-slider__tooltip__arrow {
